[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Enemies/ZombieHordeSpawner.gd" type="Script" id=1]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 1, 0.200236, 1 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 50, 10, 50 )

[node name="HordeSpawner" type="Area"]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]

[node name="HordeSpawnTimer" type="Timer" parent="."]
wait_time = 30.0
one_shot = true
autostart = true

[node name="IndividualZombieTimer" type="Timer" parent="."]
one_shot = true

[node name="DetectArea" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="DetectArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.06838, 0 )
shape = SubResource( 2 )
[connection signal="timeout" from="HordeSpawnTimer" to="." method="_on_HordeSpawnTimer_timeout"]
[connection signal="timeout" from="IndividualZombieTimer" to="." method="_on_IndividualZombieTimer_timeout"]
[connection signal="body_entered" from="DetectArea" to="." method="_on_DetectArea_body_entered"]
[connection signal="body_exited" from="DetectArea" to="." method="_on_DetectArea_body_exited"]
